--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ locale                   : "ko-KR"
 title                    : "포트폴리오1"
 title_separator          : "|"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Your Name"
-description              : "An amazing website."
+name                     : "postponer"
+description              : "포트폴리오 만드는중."
 url                      : "https://tongtongbolsal.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
